# BilliardEye

./: .gitignore  CMakeLists.txt  README.md  compile.sh  compile_and_execute.sh  ore_lavoro.txt
data/: table.h
include/recognition/: ballIdentifier.h  ballType.h  side_recognition.hpp  transformPoints.hpp
include/rendering/: render_table.hpp
include/segment/: segBalls.h  segTable.h
include/tracking/: TrackBalls.hpp
include/utils/: PurgeFP.hpp  VideoReader.hpp  balls.hpp  bboxesUtils.hpp  drawBBoxes.hpp  getTableColor.hpp  perfTesting.h  transformPoints.hpp
report/: .latexrun.db  ball_identification.tex  ball_localization.tex  conclusions.tex  experimental_setup.tex  false_positive_removal.tex  intro.tex  main.fls  main.tex  minimap_renderer.tex  performance_measure.tex  project_struct.tex  results.tex  sides_recognition.tex  table_segmentation.tex  tracker.tex  tracker_design.tex  work_split.tex
src/: identifying_main.cpp  performance_main.cpp  shared_main.cpp
src/recognition/: ballIdentifier.cpp  ballType.cpp  side_recognition.cpp  transformPoints.cpp
src/rendering/: render_table.cpp
src/segment/: segBalls.cpp  segTable.cpp
src/tracking/: TrackBalls.cpp
src/utils/: PurgeFP.cpp  VideoReader.cpp  balls.cpp  bboxesUtils.cpp  drawBBoxes.cpp  getTableColor.cpp  perfTesting.cpp  transformPoints.cpp
